[package]
name = "mahjongg"
version = "0.1.0"
authors = ["mosm <airman515@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
clap = "2.33.1"
dialoguer = "0.6.2"
image = "0.23.6"
itertools = "0.9.0"
lazy_static = "1.4.0"
piston_window = "0.109.0"
rand = "0.7.3"
resvg = "0.11.0"
rust-ini = "0.15.3"
serde = { version = "1.0.114", features = ["derive"] }
serde-xml-rs = "0.4.0"
structopt = "0.3.15"
usvg = "0.11.0"
