[package]
name = "mahjongg"
version = "0.1.0"
authors = ["mosm <airman515@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.44"
clap = "2.33.3"
dialoguer = "0.8.0"
image = "0.23.14"
itertools = "0.10.1"
lazy_static = "1.4.0"
piston_window = "0.120.0"
rand = "0.8.4"
resvg = "0.18.0"
rust-ini = "0.17.0"
serde = { version = "1.0.130", features = ["derive"] }
serde-xml-rs = "0.5.0"
structopt = "0.3.23"
tiny-skia = "0.6.1"
usvg = "0.18.0"
